--- a/notebooks/test_installed_package_ipynb.ipynb
+++ b/notebooks/test_installed_package_ipynb.ipynb
@@ -23,6 +23,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56ea51ef-5e2c-439f-9a8c-6b80ef4518ab",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -69,7 +90,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 2
    },
-   "notebookName": "(Clone) test_installed_package",
+   "notebookName": "test_installed_package_ipynb",
    "widgets": {}
   },
   "language_info": {
